第二次修改
1.修改css font-family 位置
2. 修改headTitle about 結構， h2 和 img 獨立出來
3. headTitle 刪除padding-top: 100px;
4. brand 的 p 加上白色

--- a/index.html
+++ b/index.html
@@ -1,38 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
   <div class="wrap">
     <section class="header mb64">
-      <ul class="headTitle">
-        <li><p class="headTitle-sm">Here’s</p></li>
-        <li><h1>JOANNE</h1></li>
-        <li><p class="headTitle-sm pd10 mb64">Founder of ‘’XXXD Official’’ <br> & Graphic Designer</p></li>
-        <li class="headTitle-link pd10">
-          <a href="#"><img src="./images/behance.svg" alt="BH"></a>
-          <a href="#"><img src="./images/facebook.svg" alt="FB"></a>
-          <a href="#"><img src="./images/instagram.svg" alt="IG"></a>
-          <a href="#"><img src="./images/youtube.svg" alt="YT"></a>
-        </li>
-      </ul>
+      <div class="headTitle">
+        <p class="headTitle-sm">Here’s</p>
+        <h1>JOANNE</h1>
+        <p class="headTitle-sm pd10 mb64">Founder of ‘’XXXD Official’’ <br> & Graphic Designer</p>
+        <ul class="headTitle-link pd10">
+          <li><a href="#"><img src="./images/behance.svg" alt="BH"></a></li>
+          <li><a href="#"><img src="./images/facebook.svg" alt="FB"></a></li>
+          <li><a href="#"><img src="./images/instagram.svg" alt="IG"></a></li>
+          <li><a href="#"><img src="./images/youtube.svg" alt="YT"></a></li>
+        </ul>
+      </div>
     </section>
     <section class="content">
       <div class="about">
+        <h2>About</h2>
+        <img src="./images/photo.png" alt="">
         <ul>
-          <li><h2>About</h2></li>
-          <li><img src="./images/photo.png" alt=""></li>
-          <li><p class="aboutText mb8">Joanne Chen</p></li>
-          <li><p class="aboutText mb8">1997/10/10</p></li>
-          <li><p class="aboutText-sm">National Hex School Normal University <br> Department of Visual Design</p></li>
-          <li><span class="aboutText-md mb32">Founder of ‘’XXXD Official’’</span></li>
-          <li><span class="aboutText-md mb32">Graphic Designer</span></li>
-          <li><span class="aboutText-md">Graphic Intern of Hex School</span></li>
+          <li>
+            <p class="aboutText mb8">Joanne Chen</p>
+          </li>
+          <li>
+            <p class="aboutText mb8">1997/10/10</p>
+          </li>
+          <li>
+            <p class="aboutText-sm">National Hex School Normal University <br> Department of Visual Design</p>
+          </li>
         </ul>
+        <div class="aboutMain">
+          <ul>
+            <li><span class="aboutText-md mb32">Founder of ‘’XXXD Official’’</span></li>
+            <li><span class="aboutText-md mb32">Graphic Designer</span></li>
+            <li><span class="aboutText-md">Graphic Intern of Hex School</span></li>
+          </ul>
+        </div>
       </div>
       <div class="brand mb64">
         <div class="container">
@@ -40,30 +52,45 @@
           <p class="brand-text-md mb32">Just Keep XXXD Everyday</p>
           <p class="brand-text-sm mb48">2020 年創立的個人服飾品牌<br>引領叛逆少年開啟與社會對話的窗口<br>主打概念潮流T-Shirt</p>
           <div class="brand-wrap">
-          <img class="brand-top" src="./images/brand_img1.png" alt="">
-          <div class="brand-imgs">
-            <img src="./images/brand_img2.png" alt="">
-            <img src="./images/brand_img3.png" alt="">
+            <img class="brand-top" src="./images/brand_img1.png" alt="">
+            <div class="brand-imgs">
+              <img src="./images/brand_img2.png" alt="">
+              <img src="./images/brand_img3.png" alt="">
+            </div>
           </div>
         </div>
-        </div>
-        
       </div>
       <div class="work">
         <div class="container">
           <h2>Other Works</h2>
           <p class="work-title mb48">2016-2020 年累積的作品<br>海報/廣告/攝影/LOGO/3D</p>
-        <ul class="work-photos">
-          <li><img src="./images/work_img1.png" alt=""><p class="workPhotos-top">海報設計/2017</p></li>
-          <li><img src="./images/work_img2.png" alt=""><p class="workPhotos-top">海報設計/2018</p></li>
-          <li><img src="./images/work_img3.png" alt=""><p class="workPhotos-top">海報設計/2018</p></li>
-          <li><img src="./images/work_img4.png" alt=""><p class="workPhotos-med">概念攝影/2018</p></li>
-          <li><img src="./images/work_img5.png" alt=""><p class="workPhotos-med">概念攝影/2018</p></li>
-          <li><img src="./images/work_img6.png" alt=""><p class="workPhotos-bottom">sasa 酒標設計/2019</p></li>
-          <li><img src="./images/work_img7.png" alt=""><p class="workPhotos-bottom">攝影創作/2018</p></li>
-          <li><img src="./images/work_img8.png" alt=""><p class="workPhotos-bottom">官網設計/2020</p></li>
-        </ul>
-      </div>
+          <ul class="work-photos">
+            <li><img src="./images/work_img1.png" alt="">
+              <p class="workPhotos-top">海報設計/2017</p>
+            </li>
+            <li><img src="./images/work_img2.png" alt="">
+              <p class="workPhotos-top">海報設計/2018</p>
+            </li>
+            <li><img src="./images/work_img3.png" alt="">
+              <p class="workPhotos-top">海報設計/2018</p>
+            </li>
+            <li><img src="./images/work_img4.png" alt="">
+              <p class="workPhotos-med">概念攝影/2018</p>
+            </li>
+            <li><img src="./images/work_img5.png" alt="">
+              <p class="workPhotos-med">概念攝影/2018</p>
+            </li>
+            <li><img src="./images/work_img6.png" alt="">
+              <p class="workPhotos-bottom">sasa 酒標設計/2019</p>
+            </li>
+            <li><img src="./images/work_img7.png" alt="">
+              <p class="workPhotos-bottom">攝影創作/2018</p>
+            </li>
+            <li><img src="./images/work_img8.png" alt="">
+              <p class="workPhotos-bottom">官網設計/2020</p>
+            </li>
+          </ul>
+        </div>
     </section>
     <section class="footer">
       <div class="contact container">
@@ -74,4 +101,5 @@
     </section>
   </div>
 </body>
+
 </html>
