--- a/index.html
+++ b/index.html
@@ -27,24 +27,15 @@
       <div class="about">
         <h2>About</h2>
         <img src="./images/photo.png" alt="">
+        <p class="aboutText mb8">Joanne Chen</p>
+        <p class="aboutText mb8">1997/10/10</p>
+        <p class="aboutText-sm">National Hex School Normal University <br> Department of Visual Design</p>
+        <div class="aboutLine"></div>
         <ul>
-          <li>
-            <p class="aboutText mb8">Joanne Chen</p>
-          </li>
-          <li>
-            <p class="aboutText mb8">1997/10/10</p>
-          </li>
-          <li>
-            <p class="aboutText-sm">National Hex School Normal University <br> Department of Visual Design</p>
-          </li>
+          <li><span class="aboutText-md mb32">Founder of ‘’XXXD Official’’</span></li>
+          <li><span class="aboutText-md mb32">Graphic Designer</span></li>
+          <li><span class="aboutText-md">Graphic Intern of Hex School</span></li>
         </ul>
-        <div class="aboutMain">
-          <ul>
-            <li><span class="aboutText-md mb32">Founder of ‘’XXXD Official’’</span></li>
-            <li><span class="aboutText-md mb32">Graphic Designer</span></li>
-            <li><span class="aboutText-md">Graphic Intern of Hex School</span></li>
-          </ul>
-        </div>
       </div>
       <div class="brand mb64">
         <div class="container">
